# story-mcp-hub

./: .env.test  .env.test.example  .gitignore  README.md  README_AGENT.md  TESTING.md  pyproject.toml  run_agent.py  run_tests.py  test_specialized_agent.py
.cursor/: mcp.json
.github/workflows/: tests.yml
story-sdk-mcp/: .env.example  ERC20_ABI_REFACTORING.md  README.md  __init__.py  server.py
story-sdk-mcp/services/: __init__.py  erc20_abi.py  story_service.py
story-sdk-mcp/specialized_agent/: README.md  __init__.py  assistant.py  graph.py  main.py  mcp_integration.py  primary_assistant.py  state.py  tool_lists.py  tools.py  utils.py
story-sdk-mcp/specialized_agent/specialists/: __init__.py  dispute.py  ipaccount.py  ipasset.py  license.py  nftclient.py  royalty.py  wip.py
storyscan-mcp/: .env.example  README.md  server.py
storyscan-mcp/services/: storyscan_service.py
tests/: __init__.py  conftest.py
tests/integration/: test_mcp_endpoints.py
tests/mocks/: __init__.py  api_mocks.py  web3_mocks.py
tests/unit/story_sdk_mcp/: test_server.py  test_story_api_endpoints.py  test_story_service.py
tests/unit/storyscan_mcp/: test_storyscan_api_endpoints.py  test_storyscan_service.py
tests/unit/utils/: conftest.py  test_address_resolver.py  test_address_resolver_extra.py  test_conftest_module.py  test_gas_utils.py  test_gas_utils_extra.py
utils/: README.md  __init__.py  address_resolver.py  gas_utils.py
